--- a/references.bib
+++ b/references.bib
@@ -2275,3 +2275,23 @@ doi = {10.1201/9781420072884-c30}
   author={Gelman, Andrew},
   year={2006}
 }
+
+@article{spiegelhalter2014deviance,
+  title={The deviance information criterion: 12 years on},
+  author={Spiegelhalter, David J and Best, Nicola G and Carlin, Bradley P and Van der Linde, Angelika},
+  journal={Journal of the Royal Statistical Society: Series B: Statistical Methodology},
+  pages={485--493},
+  year={2014},
+  publisher={JSTOR}
+}
+
+@article{lee2011comparison,
+  title={A comparison of conditional autoregressive models used in Bayesian disease mapping},
+  author={Lee, Duncan},
+  journal={Spatial and Spatio-temporal Epidemiology},
+  volume={2},
+  number={2},
+  pages={79--89},
+  year={2011},
+  publisher={Elsevier}
+}
