--- a/90-appendixA.Rmd
+++ b/90-appendixA.Rmd
@@ -6,7 +6,7 @@
 
 # Models for spatial structure
 
-## Comparison of AGHQ to NUTS
+## Comparison of AGHQ to NUTS {#aghq-nuts}
 
 ## Simulation study
 
