--- a/references.bib
+++ b/references.bib
@@ -2295,3 +2295,27 @@ doi = {10.1201/9781420072884-c30}
   year={2011},
   publisher={Elsevier}
 }
+
+@article{stein1999interpolation,
+  title={Interpolation of spatial data: some theory for kriging},
+  author={Stein, Michael L},
+  year={1999},
+  publisher={Springer}
+}
+
+@inproceedings{best1999bayesian,
+  title={Bayesian models for spatially correlated disease and exposure data},
+  author={Best, N and Arnold, N and Thomas, A and Waller, L and Conlon, E},
+  booktitle={Bayesian Statistics 6: Proceedings of the Sixth Valencia International Meeting},
+  volume={6},
+  pages={131},
+  year={1999},
+  organization={Oxford University Press}
+}
+
+@article{betancourt2017robust,
+ title = {Robust Gaussian processes in Stan},
+ author = {Betancourt, Michael},
+ url = {https://betanalpha.github.io/assets/case_studies/gp_part3/part3.html},
+ year = {2017}
+}
