Some model comparison and survey methods

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -148,8 +148,8 @@ For example, in SSA adolescent girls and young women (AGYW) are a large demograp
 That said, concentrated subepidemics often occur within what are nominally generalised settings [@tanser2014concentrated].
 
 <!-- Practical methods for prevention prioritisation: what is being done and is it working -->
-Various methods can be used to implement differentiatated HIV treatment and prevention services.
-These include geographic and demographic prioritisation, key population services, and risk screening based on individual-level risk characteristics.
+Differentiated HIV treatment and prevention services can be practically implemented via a number of approaches [@eaton2022aids].
+These include geographic and demographic prioritisation, key and vulnerable population services, and risk screening based on individual-level risk characteristics.
 
 ## HIV surveillance {#surveillance}
 
@@ -183,7 +183,7 @@ Recent infection can be used to help estimate HIV incidence.
 * **Awareness of status** is the proportion $\xi \in [0, 1]$ of PLHIV who have been diagnosed with HIV.
 Programming of HIV testing and diagnosis is informed by awareness of status.
 
-### Data
+### Data {#hiv-data}
 
 Data are used to estimate the above HIV indicators, in conjunction with scientific knowledge.
 Multiple sources of data are used:
