--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -328,7 +328,7 @@ This is a more computationally efficient way to implement integrated kernels.
 
 ## Simulation study
 
-We tested the ability of inferential models with varying spatial random effect specifications to accurately recover small-area quantities.
+This simulation study tests the ability of inferential models with varying spatial random effect specifications to accurately recover small-area quantities.
 The data and modelling choices were designed with a spatial epidemiology setting in mind.
 
 ### Synthetic data
@@ -411,6 +411,14 @@ Models were implemented using a Template Model Builder C++ template for the log-
 Appendix \@ref(aghq-nuts) compares approximate inference results to those obtained using the No-U-Turn Sampling (NUTS) Hamiltonian Monte Carlo (HMC) algorithm run using `Stan` [@carpenter2017stan] via the `tmbstan` package [@monnahan2018no].
 
 ## HIV prevalence study
+
+Model performance was compared in estimating HIV prevalence $\rho_i \in [0, 1]$ in adults aged $15-49$ across four countries in sub-Saharan Africa: Côte d'Ivoire ($n = 33$), Malawi ($n = 28$), Tanzania ($n = 159$) and Zimbabwe ($n = 60$).
+As before, the spatial random effect specification included in the model was varied.
+
+## Household survey data
+
+Data from the most recent publicly available Population Health Impact Assessment (PHIA) survey for each country was used.
+Sampling weights $w_{ij} = 1 / \pi_{ij}$ were used to account for complex survey design.
 
 ## Discussion
 
