--- a/references.bib
+++ b/references.bib
@@ -2319,3 +2319,38 @@ doi = {10.1201/9781420072884-c30}
  url = {https://betanalpha.github.io/assets/case_studies/gp_part3/part3.html},
  year = {2017}
 }
+
+@article{akaike1973information,
+  title={Information theory as an extension of the maximum likelihood principle--In: Second International Symposium on Information Theory (Eds) BN Petrov, F},
+  author={Akaike, Hirotugu},
+  journal={Csaki. BNPBF Csaki Budapest: Academiai Kiado},
+  year={1973}
+}
+
+@inproceedings{eaton2022aids,
+  title={{Precision public health and infectious diseases}},
+  author={Eaton, W Jeffrey},
+  booktitle={AIDS2022: Strengthening health systems session.},
+  year={2022}
+}
+
+@article{brier1950verification,
+  title={Verification of forecasts expressed in terms of probability},
+  author={Brier, Glenn W},
+  journal={Monthly weather review},
+  volume={78},
+  number={1},
+  pages={1--3},
+  year={1950}
+}
+
+@article{matheson1976scoring,
+  title={Scoring rules for continuous probability distributions},
+  author={Matheson, James E and Winkler, Robert L},
+  journal={Management science},
+  volume={22},
+  number={10},
+  pages={1087--1096},
+  year={1976},
+  publisher={INFORMS}
+}
