Fixes for proper webpage rendering

--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -59,7 +59,7 @@ Recommendations for specifying prior distributions vary.
 A central issue is the extent to which subjective information should be incorporated into the prior distribution.
 Proponents of the objective Bayesian paradigm [@berger2006case] put forward that the prior distribution should be non-informative, so as not to introduce subjectivity into the analysis.
 Others see subjectivity as fundamental to scientific inquiry, with no viable alternative [@goldstein2006subjective].
-Though subjectivity typically discussed with regard to the prior distribution, we shall see in Section \@ref(hierarchical-lgm-elgm) that the distinction between prior distribution and likelihood is not always clear.
+Though subjectivity typically discussed with regard to the prior distribution, we shall see in Section \@ref(model-structure) that the distinction between prior distribution and likelihood is not always clear.
 As such, it may be argued that issues of subjectivity are not unique to prior distribution specification, and ultimately that the challenge of specifying the data generating process is better thought of more holistically [@gelman2017prior].
 
 The probability model can be simulated from to obtain samples $(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \sim p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})$.
@@ -164,7 +164,7 @@ The analyst need therefore not only to be concerned with choosing a model suitab
 As such, there is an important interplay between modelling and computation, wherein models are bound by the limits of computation.
 As computation improves, the space of models available to the analyst expands.
 
-## Spatio-temporal statistics {st-statistics}
+## Spatio-temporal statistics {#st-statistics}
 
 Spatio-temporal statistics [@cressie2015statistics] concerns observations which are indexed by spatial or temporal location.
 In doing so, it unites the fields of spatial statistics [@bivand2008applied] and time series analysis [@shumway2017time].
