--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -53,8 +53,8 @@ In doing so, it offers practical recommendations for modelling areal spatial str
 The results are presented in @howes2023beyond.
 Code for the analysis in this chapter is available from [`https://github.com/athowes/beyond-borders`](https://github.com/athowes/beyond-borders).
 
-## Models based on adjacency {#adjacency}
-
+## Models based on adjacency {#adjacency-models}
+ 
 This section discusses spatial random effect models based on an symmetric adjacency relation $i \sim j$ between areas $A_i$ and $A_j$.
 Adjacency is typically defined by a shared border, though other choices are possible [@paciorek2013spatial].
 
@@ -104,7 +104,7 @@ If $\mathcal{G}$ is connected, in that by traversing the edges, any vertex can b
 
 @freni2018note recommended three best practices:
 
-1. The structure matrix $\mathbf{R}$ should be rescaled to have generalised variance equal to one. 
+1. The structure matrix $\mathbf{R}$ should be rescaled to have generalised variance equal to one.
 The generalised variance is defined by the geometric mean of the diagonal elements of its generalised inverse
 \begin{equation}
     \sigma^2_{\text{GV}}(\mathbf{R}) = \prod_{i = 1}^n (\mathbf{R}^-_{ii})^{1/n} = \exp \left( \frac{1}{n} \sum_{i = 1}^n \log (R^-_{ii}) \right).
@@ -218,9 +218,9 @@ Suppose we fit a Besag model upon identical data using each of the two geometrie
 If the spatial variation is relatively smooth, dividing the shaded areas into two will result in a lower estimated variance $\sigma^2_u$ in Panel B as compared with Panel A because there will appear to be less variation between neighbouring areas.
 This problem does not only apply locally: since the effect of $\sigma^2_u$ applies everywhere, the smoothing will change even in unaltered parts of the study region.
 
-## Models using kernels
+## Models using kernels {#kernel-models}
 
-Section \@ref(adjacency) reviewed ways to construct spatial random effect precision matrices using an adjacency relation.
+Section \@ref(adjacency-models) reviewed ways to construct spatial random effect precision matrices using an adjacency relation.
 An alternate approach is to define the covariance matrix using an areal kernel function which gives a measure of similarity between two areas $K: \mathcal{P}(\mathcal{S}) \times \mathcal{P}(\mathcal{S}) \to \mathbb{R}$, where $\mathcal{P}$ denotes the power set such that $\mathcal{P}(\mathcal{S})$ is the space of subsets of the study region.
 If $K$ is positive semi-definite, then define areal kernel spatial random effects by
 \begin{equation}
