Working on the Loa loa example

--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -410,18 +410,28 @@ Approximate Bayesian inference was conducted using adaptive Gauss-Hermite quadra
 Models were implemented using a Template Model Builder C++ template for the log-posterior via the `TMB` R package [@kristensen2016tmb].
 Appendix \@ref(aghq-nuts) compares approximate inference results to those obtained using the No-U-Turn Sampling (NUTS) Hamiltonian Monte Carlo (HMC) algorithm run using `Stan` [@carpenter2017stan] via the `tmbstan` package [@monnahan2018no].
 
+### Model comparison
+
+### Results
+
 ## HIV prevalence study
 
 Model performance was compared in estimating HIV prevalence $\rho_i \in [0, 1]$ in adults aged $15-49$ across four countries in sub-Saharan Africa: Côte d'Ivoire ($n = 33$), Malawi ($n = 28$), Tanzania ($n = 159$) and Zimbabwe ($n = 60$).
 As before, the spatial random effect specification included in the model was varied.
 
-## Household survey data
+### Household survey data
 
 Data from the most recent publicly available Population Health Impact Assessment (PHIA) survey for each country was used.
 Sampling weights $w_{ij} = 1 / \pi_{ij}$ were used to account for complex survey design.
+
+### Inferential models
+
+### Model comparison
+
+### Results
 
 ## Discussion
 
 Previous comparisons of spatial random effects such as @best2005comparison and @lee2011comparison used the DIC measure of model fit.
 Use of the DIC is not generally recommended.
-<!-- @follestad2003modelling -->
+Related work to discuss includes @follestad2003modelling, @konstantinoudis2020discrete.
