--- a/references.bib
+++ b/references.bib
@@ -2354,3 +2354,35 @@ doi = {10.1201/9781420072884-c30}
   year={1976},
   publisher={INFORMS}
 }
+
+@article{konstantinoudis2020discrete,
+  title={Discrete versus continuous domain models for disease mapping},
+  author={Konstantinoudis, Garyfallos and Schuhmacher, Dominic and Rue, H{\aa}vard and Spycher, Ben D},
+  journal={Spatial and spatio-temporal epidemiology},
+  volume={32},
+  pages={100319},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{diggle2016model,
+  title={Model-based geostatistics for prevalence mapping in low-resource settings},
+  author={Diggle, Peter J and Giorgi, Emanuele},
+  journal={Journal of the American Statistical Association},
+  volume={111},
+  number={515},
+  pages={1096--1120},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+
+@article{brown2015model,
+  title={Model-based geostatistics the easy way},
+  author={Brown, Patrick E},
+  journal={Journal of Statistical Software},
+  volume={63},
+  pages={1--24},
+  year={2015}
+}
+
+
