Progress on conditional simulation Loa loa example

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -926,6 +926,8 @@ This section considers inference using three approaches (Table \@ref(tab:loaloa-
 
 Table: (\#tab:loaloa-approaches) The inference methods and software considered.
 
+Following @bilodeau2022stochastic, the `geostatsp::RFsimulate` [@brown2015model] was used as a wrapper to the `RandomFields` R package [@schlather2015analysis] to implement conditional Gaussian field simulation with hyperparameter samples.
+
 ## The Naomi model {#naomi}
 
 The work in this chapter was conducted in search of a fast and accurate Bayesian inference method for the Naomi model [@eaton2021naomi].
