--- a/references.bib
+++ b/references.bib
@@ -2385,4 +2385,12 @@ doi = {10.1201/9781420072884-c30}
   year={2015}
 }
 
+@article{schlather2015analysis,
+  title={Analysis, simulation and prediction of multivariate random fields with package RandomFields},
+  author={Schlather, Martin and Malinowski, Alexander and Menck, Peter J and Oesting, Marco and Strokorb, Kirstin},
+  journal={Journal of Statistical Software},
+  volume={63},
+  pages={1--25},
+  year={2015}
+}
 
